Bugfix: bottom of aside was not visible on small screens

--- a/index.css
+++ b/index.css
@@ -9,6 +9,7 @@
     --field-border-color-focus: #29916e;
     --field-range-thumb-color: #ccc;
     --alternative-background: aquamarine;
+    --aside-header-v-padding: 1.5em;
 }
 
 html{
@@ -31,7 +32,7 @@ body {
 }
 
 main, aside {
-    padding: 1.5em 2em;
+    padding: var(--aside-header-v-padding) 2em;
 }
 
 main {
@@ -40,6 +41,7 @@ main {
 
 aside {
     position: fixed;
+    top: 0;
     transform: translateY(-100%);
     width: 100%;
     height: 100%;
@@ -47,6 +49,7 @@ aside {
     transition-property: transform;
     z-index: 1;
     overflow-y: scroll;
+    padding-top: calc(var(--aside-header-v-padding) + var(--header-height));
 }
 
 aside.show {
@@ -336,6 +339,7 @@ input[type=checkbox]:checked::before {
     aside {
         transform: translateY(0);
         width: var(--aside-width);
+        padding-top: var(--aside-header-v-padding);
     }
 
     header {
